--- a/conf_script.ini
+++ b/conf_script.ini
@@ -1,18 +1,30 @@
 [Benchmarks]
 
-spechmmer_0
+speclibm_0
 
-spechmmer_1
+speclibm_1
 
-spechmmer_2
+speclibm_2
 
-spechmmer_3
+speclibm_3
 
-spechmmer_4
+speclibm_4
 
-spechmmer_5
+speclibm_5
 
-spechmmer_6
+speclibm_6
+
+speclibm_7
+
+speclibm_8
+
+speclibm_9
+
+speclibm_10
+
+speclibm_11
+
+speclibm_12
 
 [Parameters] 
 
@@ -26,4 +38,4 @@ system.l2.overall_miss_rate::total
 
 [Output]
 
-Results_hmmer.txt
+Results_libm.txt
