--- a/conf_script.ini
+++ b/conf_script.ini
@@ -1,30 +1,29 @@
 [Benchmarks]
 
-speclibm_0
+specsjeng_0
 
-speclibm_1
+specsjeng_1
 
-speclibm_2
+specsjeng_2
 
-speclibm_3
+specsjeng_3
 
-speclibm_4
+specsjeng_4
 
-speclibm_5
+specsjeng_5
 
-speclibm_6
+specsjeng_6
 
-speclibm_7
+specsjeng_7
 
-speclibm_8
+specsjeng_8
 
-speclibm_9
+specsjeng_9
 
-speclibm_10
+specsjeng_10
 
-speclibm_11
+specsjeng_11
 
-speclibm_12
 
 [Parameters] 
 
@@ -38,4 +37,4 @@ system.l2.overall_miss_rate::total
 
 [Output]
 
-Results_libm.txt
+Results_sjeng.txt
